# autonomous-agent

./: .gitignore  README.md  check_infra.py  pyproject.toml  render.yaml  run_agents.py  seed_user.py  test_agents.py  test_tools.py
agents/: base_agent.py  browser_agent.py  coding_agent.py  critic_agent.py  rag_agent.py  research_agent.py
agents/orchestrator/: dispatcher.py  planner.py  task_queue.py
backend/: config.py  logger.py  main.py
backend/middleware/: auth.py
backend/models/: database.py  task.py  user.py
backend/routers/: auth.py  health.py  tasks.py
backend/schemas/: task.py  user.py
backend/websocket/: manager.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/agents/: AgentGrid.tsx
frontend/src/components/dashboard/: LiveFeed.tsx  Pipeline.tsx  ResultBox.tsx  StatsRow.tsx  TaskForm.tsx
frontend/src/components/layout/: Sidebar.tsx  Topbar.tsx
frontend/src/components/tasks/: TaskTable.tsx
frontend/src/hooks/: useAuth.ts  useTasks.ts  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
frontend/src/store/: authStore.ts
memory/: task_memory.py  vector_store.py
tests/: conftest.py
tests/api/: test_auth.py  test_health.py  test_tasks.py
tests/integration/: test_memory_pipeline.py  test_orchestration_flow.py  test_tool_router.py
tests/unit/: test_agents.py  test_dispatcher.py  test_planner.py  test_task_memory.py  test_task_queue.py  test_tools.py  test_vector_store.py  test_websocket.py
tools/: browser.py  code_executor.py  embeddings.py  llm.py  router.py  vector_search.py  web_search.py
(+1 files in other folders)
