[project]
name = "autonomous-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
