[project]
name = "autonomous-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.136.1",
    "groq>=1.2.0",
    "passlib[bcrypt]>=1.7.4",
    "playwright>=1.60.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "tavily-python>=0.7.24",
    "uvicorn>=0.47.0",
]
