[project]
name = "autonomous-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.136.1",
    "groq>=1.2.0",
    "passlib[bcrypt]>=1.7.4",
    "playwright>=1.60.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.49",
    "tavily-python>=0.7.24",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
